cmake_minimum_required(VERSION 3.2)
project(DRNLib)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(DRLIB_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(DRLIB_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(DRLIB_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(CONST_HEADERS_DIR ${PROJECT_SOURCE_DIR}/const)
set(LALGEBRA_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/lalgebra)

include_directories(${DRLIB_INSTALL_INCLUDE_DIR})
include_directories(${CONST_HEADERS_DIR})
include_directories(${LALGEBRA_HEADERS_DIR})

add_subdirectory(src)
